--- a/EmployeeManagementService/EmployeeManagementService.API/EmployeeManagementService.API.csproj
+++ b/EmployeeManagementService/EmployeeManagementService.API/EmployeeManagementService.API.csproj
@@ -4,5 +4,10 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="11.0.0" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+  </ItemGroup>
+
 
 </Project>
