add new employee service

--- a/EmployeeManagementService/EmployeeManagementService.API/appsettings.json
+++ b/EmployeeManagementService/EmployeeManagementService.API/appsettings.json
@@ -7,5 +7,6 @@
     }
   },
   "AllowedHosts": "*",
-  "PasswordSalt": "arandomstringforlocaldev"
+  "PasswordSalt": "arandomstringforlocaldev",
+  "Roles":  "Administrator, Employee"
 }
