get all employees and get single employee API endpoint

--- a/EmployeeManagementService/EmployeeManagementService.API/EmployeeManagementService.API.csproj
+++ b/EmployeeManagementService/EmployeeManagementService.API/EmployeeManagementService.API.csproj
@@ -4,5 +4,17 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\EmployeeManagementService.Domain\EmployeeManagementService.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="DTOMappers\" />
+  </ItemGroup>
+
 
 </Project>
