--- a/EmployeeManagementService/EmployeeManagementService.API/appsettings.json
+++ b/EmployeeManagementService/EmployeeManagementService.API/appsettings.json
@@ -8,5 +8,10 @@
   },
   "AllowedHosts": "*",
   "PasswordSalt": "arandomstringforlocaldev",
-  "Roles":  "Administrator,Employee"
+  "Roles": "Administrator,Employee",
+  "Jwt": {
+    "Issuer": "localhost.com",
+    "Audience": "rof_services",
+    "Key": "thisisjustsomerandomlocalkey"
+  }
 }
