--- a/AuthenticationService/AuthenticationService.API/Properties/launchSettings.json
+++ b/AuthenticationService/AuthenticationService.API/Properties/launchSettings.json
@@ -4,8 +4,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:27928",
-      "sslPort": 44341
+      "applicationUrl": "http://localhost:21105",
+      "sslPort": 44330
     }
   },
   "profiles": {
@@ -17,7 +17,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "AuthorizationService.API": {
+    "AuthenticationService.API": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "weatherforecast",
