--- a/AuthenticationService/AuthenticationService.Domain/AuthenticationService.Domain.csproj
+++ b/AuthenticationService/AuthenticationService.Domain/AuthenticationService.Domain.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -9,9 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\AuthenticationService.Domain\AuthenticationService.Domain.csproj" />
     <ProjectReference Include="..\AuthenticationService.Infrastructure\AuthenticationService.Infrastructure.csproj" />
   </ItemGroup>
-
 
 </Project>
