--- a/ClientManagementService/ClientManagementService.Domain/ClientManagementService.Domain.csproj
+++ b/ClientManagementService/ClientManagementService.Domain/ClientManagementService.Domain.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ClientManagementService.Infrastructure\ClientManagementService.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
