added unit test for authservice

--- a/AuthenticationService/AuthenticationService.API/AuthenticationService.API.csproj
+++ b/AuthenticationService/AuthenticationService.API/AuthenticationService.API.csproj
@@ -13,5 +13,9 @@
     <ProjectReference Include="..\AuthenticationService.Infrastructure\AuthenticationService.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 
 </Project>
