--- a/AuthenticationService/AuthenticationService.Tests/AuthenticationService.Tests.csproj
+++ b/AuthenticationService/AuthenticationService.Tests/AuthenticationService.Tests.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AuthenticationService.Domain\AuthenticationService.Domain.csproj" />
     <ProjectReference Include="..\AuthenticationService.Infrastructure\AuthenticationService.Infrastructure.csproj" />
   </ItemGroup>
 
