updating postman to call new authentication service when logging in for employees

--- a/AuthenticationService/AuthenticationService.API/appsettings.Development.json
+++ b/AuthenticationService/AuthenticationService.API/appsettings.Development.json
@@ -5,5 +5,11 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "EmployeeManagement": {
+    "URL": "https://localhost:44369"
+  },
+  "ClientManagement": {
+    "URL": "" 
   }
 }
