create client connected to back end

--- a/rof-scheduler/.env.development
+++ b/rof-scheduler/.env.development
@@ -1,1 +1,2 @@
 REACT_APP_EMPLOYEE_MANAGEMENT_BASE_URL = https://localhost:44369/api
+REACT_APP_CLIENT_MANAGEMENT_BASE_URL = https://localhost:44306/api
