--- a/rof-scheduler/package.json
+++ b/rof-scheduler/package.json
@@ -14,6 +14,7 @@
     "env-cmd": "^10.1.0",
     "react": "^18.0.0",
     "react-bootstrap": "^2.2.3",
+    "react-bootstrap-icons": "^1.8.4",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
