added authentication to client and token extension, cleaned up token handler in employee management.

--- a/ClientManagementService/ClientManagementService.API/appsettings.json
+++ b/ClientManagementService/ClientManagementService.API/appsettings.json
@@ -7,5 +7,10 @@
     }
   },
   "AllowedHosts": "*",
-  "PasswordSalt": "arandomstringforlocaldev"
+  "PasswordSalt": "arandomstringforlocaldev",
+  "Jwt": {
+    "Issuer": "localhost.com",
+    "Audience": "rof_services",
+    "Key": "thisisjustsomerandomlocalkey"
+  }
 }
