--- a/ClientManagementService/ClientManagementService.API/ClientManagementService.API.csproj
+++ b/ClientManagementService/ClientManagementService.API/ClientManagementService.API.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.27" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
   </ItemGroup>
 
