--- a/PetServiceManagement/PetServiceManagement.API/PetServiceManagement.API.csproj
+++ b/PetServiceManagement/PetServiceManagement.API/PetServiceManagement.API.csproj
@@ -4,5 +4,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PetServiceManagement.Domain\PetServiceManagement.Domain.csproj" />
+  </ItemGroup>
+
 
 </Project>
