--- a/EventsManagementService/EventManagementService.API/EventManagementService.API.csproj
+++ b/EventsManagementService/EventManagementService.API/EventManagementService.API.csproj
@@ -8,5 +8,10 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\EventManagementService.Domain\EventManagementService.Domain.csproj" />
+    <ProjectReference Include="..\EventManagementService.Infrastructure\EventManagementService.Infrastructure.csproj" />
+  </ItemGroup>
+
 
 </Project>
