--- a/EventsManagementService/EventManagementService.Domain/EventManagementService.Domain.csproj
+++ b/EventsManagementService/EventManagementService.Domain/EventManagementService.Domain.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\EventManagementService.Infrastructure\EventManagementService.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
