new service call to get holidays

--- a/rof-scheduler/.env.development
+++ b/rof-scheduler/.env.development
@@ -1,3 +1,4 @@
 REACT_APP_EMPLOYEE_MANAGEMENT_BASE_URL = https://localhost:44369/api
 REACT_APP_CLIENT_MANAGEMENT_BASE_URL = https://localhost:44306/api
 REACT_APP_AUTH_SERVICE_BASE_URL = https://localhost:44330/api
+REACT_APP_PET_SERVICE_BASE_URL = https://localhost:44336/api
