--- a/EventsManagementService/EventManagementService.API/appsettings.json
+++ b/EventsManagementService/EventManagementService.API/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Issuer": "localhost.com",
+    "Audience": "rof_services",
+    "Key": "thisisjustsomerandomlocalkey"
+  }
 }
