refactoring and created shared lib

--- a/EmployeeManagementService/EmployeeManagementService.Domain/EmployeeManagementService.Domain.csproj
+++ b/EmployeeManagementService/EmployeeManagementService.Domain/EmployeeManagementService.Domain.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="RofShared" Version="1.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\EmployeeManagementService.Infrastructure\EmployeeManagementService.Infrastructure.csproj" />
   </ItemGroup>
 
