--- a/EmployeeManagementService/EmployeeManagementService.API/EmployeeManagementService.API.csproj
+++ b/EmployeeManagementService/EmployeeManagementService.API/EmployeeManagementService.API.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.23" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
+    <PackageReference Include="RofShared" Version="1.0.1" />
   </ItemGroup>
 
   <ItemGroup>
