separate dto class

--- a/EmployeeManagementService/EmployeeManagementService.Domain/EmployeeManagementService.Domain.csproj
+++ b/EmployeeManagementService/EmployeeManagementService.Domain/EmployeeManagementService.Domain.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\EmployeeManagementService.DTO\EmployeeManagementService.DTO.csproj" />
     <ProjectReference Include="..\EmployeeManagementService.Infrastructure\EmployeeManagementService.Infrastructure.csproj" />
   </ItemGroup>
 
