refactoring authentication service

--- a/AuthenticationService/AuthenticationService.API/AuthenticationService.API.csproj
+++ b/AuthenticationService/AuthenticationService.API/AuthenticationService.API.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.24" />
+    <PackageReference Include="RofShared" Version="1.0.4" />
   </ItemGroup>
 
   <ItemGroup>
