--- a/AuthenticationService/AuthenticationService.Domain/AuthenticationService.Domain.csproj
+++ b/AuthenticationService/AuthenticationService.Domain/AuthenticationService.Domain.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.24" />
+    <PackageReference Include="RofShared" Version="1.0.4" />
   </ItemGroup>
 
   <ItemGroup>
