--- a/AuthenticationService/AuthenticationService.Infrastructure/AuthenticationService.Infrastructure.csproj
+++ b/AuthenticationService/AuthenticationService.Infrastructure/AuthenticationService.Infrastructure.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="RofShared" Version="1.0.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AuthenticationService.DTO\AuthenticationService.DTO.csproj" />
+  </ItemGroup>
+
 </Project>
