--- a/AuthenticationService/AuthenticationService.Tests/AuthenticationService.Tests.csproj
+++ b/AuthenticationService/AuthenticationService.Tests/AuthenticationService.Tests.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="3.1.32" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
     <PackageReference Include="Moq" Version="4.17.2" />
     <PackageReference Include="NUnit" Version="3.12.0" />
