--- a/PetServiceManagement/PetServiceManagement.API/PetServiceManagement.API.csproj
+++ b/PetServiceManagement/PetServiceManagement.API/PetServiceManagement.API.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.28" />
+    <PackageReference Include="RofShared" Version="1.0.5" />
   </ItemGroup>
 
   <ItemGroup>
