--- a/PetServiceManagement/PetServiceManagement.Tests/PetServiceManagement.Tests.csproj
+++ b/PetServiceManagement/PetServiceManagement.Tests/PetServiceManagement.Tests.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="3.1.32" />
     <PackageReference Include="Moq" Version="4.18.2" />
     <PackageReference Include="NUnit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.16.1" />
