--- a/ClientManagementService/ClientManagementService.API/ClientManagementService.API.csproj
+++ b/ClientManagementService/ClientManagementService.API/ClientManagementService.API.csproj
@@ -10,8 +10,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.27" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
+    <PackageReference Include="RofShared" Version="1.0.5" />
   </ItemGroup>
 
 
