--- a/ClientManagementService/ClientManagementService.Domain/ClientManagementService.Domain.csproj
+++ b/ClientManagementService/ClientManagementService.Domain/ClientManagementService.Domain.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="RofShared" Version="1.0.5" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ClientManagementService.Infrastructure\ClientManagementService.Infrastructure.csproj" />
   </ItemGroup>
 
