Added DTO Mapper Folder

--- a/ClientManagementService/ClientManagementService.Domain/ClientManagementService.Domain.csproj
+++ b/ClientManagementService/ClientManagementService.Domain/ClientManagementService.Domain.csproj
@@ -12,4 +12,8 @@
     <ProjectReference Include="..\ClientManagementService.Infrastructure\ClientManagementService.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Mappers\DTO\" />
+  </ItemGroup>
+
 </Project>
