updated using statements

--- a/EventsManagementService/EventManagementService.Domain/EventManagementService.Domain.csproj
+++ b/EventsManagementService/EventManagementService.Domain/EventManagementService.Domain.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\EventManagementService.DTO\EventManagementService.DTO.csproj" />
     <ProjectReference Include="..\EventManagementService.Infrastructure\EventManagementService.Infrastructure.csproj" />
   </ItemGroup>
 
