--- a/DatamartManagementService/DatamartManagementService.Domain/DatamartManagementService.Domain.csproj
+++ b/DatamartManagementService/DatamartManagementService.Domain/DatamartManagementService.Domain.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="7.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DatamartManagementService.Infrastructure\DatamartManagementService.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
