rof datamart mapper test

--- a/DatamartManagementService/DatamartManagementService.Test/DatamartManagementService.Test.csproj
+++ b/DatamartManagementService/DatamartManagementService.Test/DatamartManagementService.Test.csproj
@@ -14,4 +14,9 @@
     <PackageReference Include="coverlet.collector" Version="3.1.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DatamartManagementService.Domain\DatamartManagementService.Domain.csproj" />
+    <ProjectReference Include="..\DatamartManagementService.Infrastructure\DatamartManagementService.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
