--- a/DatamartManagementService/DatamartManagementService.Domain/DatamartManagementService.Domain.csproj
+++ b/DatamartManagementService/DatamartManagementService.Domain/DatamartManagementService.Domain.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DatamartManagementService.DTO\DatamartManagementService.DTO.csproj" />
     <ProjectReference Include="..\DatamartManagementService.Infrastructure\DatamartManagementService.Infrastructure.csproj" />
   </ItemGroup>
 
