--- a/DatamartManagementService/DatamartManagementService.Test/DatamartManagementService.Test.csproj
+++ b/DatamartManagementService/DatamartManagementService.Test/DatamartManagementService.Test.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="3.1.32" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
     <PackageReference Include="Moq" Version="4.20.69" />
     <PackageReference Include="NUnit" Version="3.13.3" />
@@ -18,6 +19,7 @@
   <ItemGroup>
     <ProjectReference Include="..\DatamartManagementService.Domain\DatamartManagementService.Domain.csproj" />
     <ProjectReference Include="..\DatamartManagementService.Infrastructure\DatamartManagementService.Infrastructure.csproj" />
+    <ProjectReference Include="..\DataMart\DataMart.csproj" />
   </ItemGroup>
 
 </Project>
