backend connection + basic temp of mapping

--- a/rof-scheduler/.env.development
+++ b/rof-scheduler/.env.development
@@ -3,3 +3,4 @@ REACT_APP_CLIENT_MANAGEMENT_BASE_URL = https://localhost:44306/api
 REACT_APP_AUTH_SERVICE_BASE_URL = https://localhost:44330/api
 REACT_APP_PET_SERVICE_BASE_URL = https://localhost:44336/api
 REACT_APP_EVENT_SERVICE_BASE_URL = https://localhost:44395/api
+REACT_APP_DATAMART_SERVICE_BASE_URL = https://localhost:44318/api
